Fixing up Spacing for sections on about page, biggest screen size

--- a/css/about.css
+++ b/css/about.css
@@ -264,7 +264,7 @@
   ._120 {
     display: block;
     margin: 0px 60px;
-    padding-top: 13.5vh;
+    padding-top: 10vh;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -webkit-flex-direction: column;
@@ -344,9 +344,9 @@
   }
   
   .loves {
-    height: 532px;
-    margin-top: 60px;
-    margin-bottom: 60px;
+    height: 520px;
+    margin-top: 80px;
+    margin-bottom: 80px;
     background-color: #f6f8f9;
   }
   
